trunk/Archive2/38/a3f8d8ca859c1b/output
main.cpp: In instantiation of 'void Attribute<P>::set(Attribute<P>::Tn<k>&) [with int k = 0; P = {int [2]}; Attribute<P>::Tn<k> = int [2]]':
main.cpp:173:17:   required from here
main.cpp:121:62: error: 'memcpy' was not declared in this scope
         memcpy( data + A<k>::offset,  &ref,  A<k>::attr_size );
                                                              ^
